// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageStamp  snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <img
      class="sc-bdvvaa cRbUmd"
      src="https://s3.amazonaws.com/uifaces/faces/twitter/aaronkwhite/128.jpg"
    />
  </div>
</DocumentFragment>
`;

exports[`ImageStamp  snapshot 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <img
      class="sc-bdvvaa eVoqhh"
      src="https://s3.amazonaws.com/uifaces/faces/twitter/gojeanyn/128.jpg"
    />
  </div>
</DocumentFragment>
`;
